--- a/asset/css/custome.css
+++ b/asset/css/custome.css
@@ -75,6 +75,12 @@
     }
 }
 
+.footer-logo{
+    width: 300px ;
+    object-fit: contain !important;
+    object-position: center;
+}
+
 /* Tablet */
 @media (max-width: 991px) {
     .scroll-content {
@@ -84,6 +90,10 @@
     .hero-tag-btn {
         padding: 8px 20px;
         font-size: 14px;
+    }
+
+    .footer-logo{
+        width: 200px;
     }
 }
 
@@ -106,5 +116,8 @@
     .teaser-img {
         display: block;
         width: 100%;
+    }
+    .footer-logo{
+        width: 120px;
     }
 }
