to add updateed

--- a/asset/css/custome.css
+++ b/asset/css/custome.css
@@ -64,6 +64,41 @@
     flex-shrink: 0;
 }
 
+/* Popup Background */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: none; /* Hidden by default */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Popup Box */
+.popup-box {
+  background: #fff;
+  padding: 30px 40px;
+  border-radius: 10px;
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+}
+
+.popup-btn {
+  margin-top: 15px;
+  padding: 8px 20px;
+  background: #000;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+
 /* Keyframes for infinite scroll */
 @keyframes scroll-left {
     0% {
@@ -120,4 +155,7 @@
     .footer-logo{
         width: 120px;
     }
+    .mobile-hide {
+    display: none !important;
+  }
 }
